correcting UserService and NotificationService returns